[gd_scene load_steps=6 format=3 uid="uid://dn4yh6j8i7jfc"]

[ext_resource type="Script" uid="uid://c8one3r4palwq" path="res://projectData/client.gd" id="1_8xnlh"]
[ext_resource type="Script" uid="uid://bi07qdixgktne" path="res://addons/HTTPManager/classes/HTTPManager.gd" id="2_n7tem"]
[ext_resource type="Script" uid="uid://b2u4vn2co3vws" path="res://projectData/table_container.gd" id="2_ttkol"]
[ext_resource type="Theme" uid="uid://cqu7acm5y8r0s" path="res://projectData/themes/new_theme.tres" id="3_fneic"]
[ext_resource type="PackedScene" uid="uid://c31mvkscjkndt" path="res://projectData/recordshead.tscn" id="3_ttkol"]

[node name="Client" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8xnlh")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 800.0

[node name="returnbtn" type="Button" parent="Container"]
layout_mode = 2
text = "RETURN"

[node name="pagefinder" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Container/pagefinder"]
layout_mode = 2
size_flags_horizontal = 3
text = "Page :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pagenumber" type="LineEdit" parent="Container/pagefinder"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "No Page"

[node name="BoxContainer" type="BoxContainer" parent="Container/pagefinder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 11.1

[node name="selectpage" type="Button" parent="Container/pagefinder"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select"

[node name="SearchContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.19

[node name="recordheads" parent="Container/SearchContainer" instance=ExtResource("3_ttkol")]
layout_mode = 2
theme = ExtResource("3_fneic")

[node name="TableContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_ttkol")

[node name="PageContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="HTTPManager" type="Node" parent="."]
script = ExtResource("2_n7tem")
metadata/_custom_type_script = "uid://bi07qdixgktne"

[connection signal="pressed" from="Container/returnbtn" to="." method="_on_returnbtn_pressed"]
[connection signal="pressed" from="Container/pagefinder/selectpage" to="." method="_on_selectpage_pressed"]
